--- a/Falabella7/Venetian300x600.html
+++ b/Falabella7/Venetian300x600.html
@@ -2134,22 +2134,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 80px;
-        -ms-transform: translate(0, 0) translate(8px, 315px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(8px, 315px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(8px, 315px) rotate(0deg);
-        transform: translate(0, 0) translate(8px, 315px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(5px, 316px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(5px, 316px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(5px, 316px) rotate(0deg);
+        transform: translate(0, 0) translate(5px, 316px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
 #i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
 #i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 73px;
-        -ms-transform: translate(0, 0) translate(16px, 344px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 344px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 344px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 344px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(16px, 366px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 366px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 366px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 366px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2173,10 +2173,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i42 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 58px; height: 40px;
-        -ms-transform: translate(0, 0) translate(231px, 398px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(231px, 398px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(231px, 398px) rotate(0deg);
-        transform: translate(0, 0) translate(231px, 398px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(231px, 432px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(231px, 432px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(231px, 432px) rotate(0deg);
+        transform: translate(0, 0) translate(231px, 432px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2237,58 +2237,58 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     visibility: hidden !important;
 }
 /*#/#*//*#i42.i43.positioning.css:positioning/base/css.2*/
-#i42 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 250px;
-        -ms-transform: translate(0, 0) translate(0px, 446px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 446px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 446px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 446px) rotate(0deg);
+#i42 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 120px;
+        -ms-transform: translate(0, 0) translate(-10px, 479px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-10px, 479px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-10px, 479px) rotate(0deg);
+        transform: translate(0, 0) translate(-10px, 479px) rotate(0deg);
 }
 /*#/#*//*#i73.image.css:image/base/css*/
 #i73 { opacity: 1; }
 /*#/#*//*#i73.i74.positioning.css:positioning/base/css.2*/
 #i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 131px; height: 37px;
-        -ms-transform: translate(0, 0) translate(9px, 263px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(9px, 263px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(9px, 263px) rotate(0deg);
-        transform: translate(0, 0) translate(9px, 263px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(157px, 262px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(157px, 262px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(157px, 262px) rotate(0deg);
+        transform: translate(0, 0) translate(157px, 262px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i68.image.css:image/base/css*/
 #i68 { opacity: 1; }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 600px;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 600px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i48.image.css:image/base/css*/
 #i48 { opacity: 1; }
 /*#/#*//*#i48.i49.positioning.css:positioning/base/css.2*/
 #i48 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(6px, 412px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 412px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 412px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 412px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(6px, 439px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(6px, 439px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(6px, 439px) rotate(0deg);
+        transform: translate(0, 0) translate(6px, 439px) rotate(0deg);
 }
 /*#/#*//*#i50.image.css:image/base/css*/
 #i50 { opacity: 1; }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
 #i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 26px; height: 26px;
-        -ms-transform: translate(0, 0) translate(35px, 412px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(35px, 412px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(35px, 412px) rotate(0deg);
-        transform: translate(0, 0) translate(35px, 412px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(35px, 439px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(35px, 439px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(35px, 439px) rotate(0deg);
+        transform: translate(0, 0) translate(35px, 439px) rotate(0deg);
 }
 /*#/#*//*#i52.image.css:image/base/css*/
 #i52 { opacity: 1; }
 /*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
 #i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(64px, 412px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(64px, 412px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(64px, 412px) rotate(0deg);
-        transform: translate(0, 0) translate(64px, 412px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(64px, 439px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(64px, 439px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(64px, 439px) rotate(0deg);
+        transform: translate(0, 0) translate(64px, 439px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2297,23 +2297,21 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">¿Pensando en Europa?</div>
+<div id="i7">Viaja a Europa desde $2.969.000</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Déjate sorprender por los nuevos circuitos a Europa ¿Qué esperas para iniciar una nueva aventura?</div>
+<div id="i12">En este mes regálate el viaje a Europa que tanto sueñas.Con Viajes Falabella es posible,visítanos en la sucursal más cercana a ti y reserva tu viaje.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/WbkhSqc.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/EY8TkE1.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/AUZZFMv.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/YUO9GgH.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/qhOE80m.jpg"></dataimg>
-<!--#/#--><!--#i2.i72.slice-image.html:slice-image/html.1-->
-<dataimg id="i72" src="https://i.imgur.com/3CMOldo.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/Wz3qkmD.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.image.html:image/html-->
-<img id="i42" src="https://i.imgur.com/0caj6mK.png"/>
+<img id="i42" src="https://i.imgur.com/cu1YaPQ.jpg"/>
 <!--#/#--><!--#i73.image.html:image/html-->
 <img id="i73" src="https://i.imgur.com/8ueWCdQ.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2378,8 +2376,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i2.i72.slice-image.js:slice-image/base/js.1*/
-
 /*#/#*//*#i42.image.js:image/base/js*/
 
 /*#/#*//*#i42.i43.positioning.js:positioning/base/js.2*/
@@ -2396,13 +2392,13 @@ bmShow('i16');
 
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
-/*#/#*//*#i68.i70.actions.js:actions/base/js.1*/
+/*#/#*//*#i68.i75.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
-    /*#i70.i71.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i75.i76.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2413,13 +2409,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i48.i49.positioning.js:positioning/base/js.2*/
 bmShow('i48');
-/*#/#*//*#i48.i62.actions.js:actions/base/js.1*/
+/*#/#*//*#i48.i77.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i48');
 
 el.addEventListener('click', function(e){
-    /*#i62.i63.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i77.i78.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2430,13 +2426,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i50.i51.positioning.js:positioning/base/js.2*/
 bmShow('i50');
-/*#/#*//*#i50.i64.actions.js:actions/base/js.1*/
+/*#/#*//*#i50.i79.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i50');
 
 el.addEventListener('click', function(e){
-    /*#i64.i65.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i79.i80.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2447,13 +2443,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i52.i53.positioning.js:positioning/base/js.2*/
 bmShow('i52');
-/*#/#*//*#i52.i66.actions.js:actions/base/js.1*/
+/*#/#*//*#i52.i81.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i52');
 
 el.addEventListener('click', function(e){
-    /*#i66.i67.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i81.i82.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2478,25 +2474,22 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: ¿Pensando en Europa?; customName: false;
+name: Viaja a Europa desde $2.969.000; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: Déjate sorprender por los nuevos circuitos a Europa ¿Qué esperas para iniciar una nueva aventura?; customName: false;
+name: En este mes regálate el viaje a Europa que tanto sueñas.Con Viajes Falabella es posible,visítanos en la sucursal más cercana a ti y reserva tu viaje.; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: WbkhSqc.jpg; fileId: ; sourceTypeId: externalUrl;
+name: EY8TkE1.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: AUZZFMv.jpg; fileId: ; sourceTypeId: externalUrl;
+name: YUO9GgH.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: qhOE80m.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i72.slice-image.meta:slice-image/meta.1*/
-name: 3CMOldo.jpg; fileId: ; sourceTypeId: externalUrl;
-customName: false;
+name: Wz3qkmD.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i42.image.meta:image/meta*/
