--- a/Falabella7/Venetian320x480.html
+++ b/Falabella7/Venetian320x480.html
@@ -2146,29 +2146,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i42.image.css:image/base/css*/
 #i42 { opacity: 1; }
 /*#/#*//*#i42.i43.positioning.css:positioning/base/css.2*/
-#i42 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 267px;
-        -ms-transform: translate(0, 0) translate(0px, 418px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 418px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 418px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 418px) rotate(0deg);
+#i42 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 80px;
+        -ms-transform: translate(0, 0) translate(0px, 419px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 419px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 419px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 419px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 24px;
-        -ms-transform: translate(0, 0) translate(-4px, 321px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-4px, 321px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-4px, 321px) rotate(0deg);
-        transform: translate(0, 0) translate(-4px, 321px) rotate(0deg);
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 287px; height: 24px;
+        -ms-transform: translate(0, 0) translate(8px, 323px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(8px, 323px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(8px, 323px) rotate(0deg);
+        transform: translate(0, 0) translate(8px, 323px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
-#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
 #i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 274px; height: 63px;
-        -ms-transform: translate(0, 0) translate(17px, 347px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(17px, 347px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(17px, 347px) rotate(0deg);
-        transform: translate(0, 0) translate(17px, 347px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(18px, 345px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(18px, 345px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(18px, 345px) rotate(0deg);
+        transform: translate(0, 0) translate(18px, 345px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2192,17 +2192,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i75 { opacity: 1; }
 /*#/#*//*#i75.i76.positioning.css:positioning/base/css.2*/
 #i75 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 146px; height: 41px;
-        -ms-transform: translate(0, 0) translate(8px, 274px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(8px, 274px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(8px, 274px) rotate(0deg);
-        transform: translate(0, 0) translate(8px, 274px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(174px, 274px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(174px, 274px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(174px, 274px) rotate(0deg);
+        transform: translate(0, 0) translate(174px, 274px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 49px; height: 34px;
-        -ms-transform: translate(0, 0) translate(258px, 378px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(258px, 378px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(258px, 378px) rotate(0deg);
-        transform: translate(0, 0) translate(258px, 378px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(263px, 382px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(263px, 382px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(263px, 382px) rotate(0deg);
+        transform: translate(0, 0) translate(263px, 382px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2277,28 +2277,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i48 { opacity: 1; }
 /*#/#*//*#i48.i49.positioning.css:positioning/base/css.2*/
 #i48 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(2px, 385px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(2px, 385px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(2px, 385px) rotate(0deg);
-        transform: translate(0, 0) translate(2px, 385px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(2px, 388px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(2px, 388px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(2px, 388px) rotate(0deg);
+        transform: translate(0, 0) translate(2px, 388px) rotate(0deg);
 }
 /*#/#*//*#i50.image.css:image/base/css*/
 #i50 { opacity: 1; }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
 #i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 25px;
-        -ms-transform: translate(0, 0) translate(28px, 386px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(28px, 386px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(28px, 386px) rotate(0deg);
-        transform: translate(0, 0) translate(28px, 386px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(28px, 389px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(28px, 389px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(28px, 389px) rotate(0deg);
+        transform: translate(0, 0) translate(28px, 389px) rotate(0deg);
 }
 /*#/#*//*#i52.image.css:image/base/css*/
 #i52 { opacity: 1; }
 /*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
 #i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(55px, 386px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(55px, 386px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(55px, 386px) rotate(0deg);
-        transform: translate(0, 0) translate(55px, 386px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(55px, 389px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(55px, 389px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(55px, 389px) rotate(0deg);
+        transform: translate(0, 0) translate(55px, 389px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2309,21 +2309,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i72.shape.html:shape/html-->
 <div id="i72"></div>
 <!--#/#--><!--#i42.image.html:image/html-->
-<img id="i42" src="https://i.imgur.com/0caj6mK.png"/>
+<img id="i42" src="https://i.imgur.com/3bIxqKj.jpg"/>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">¿Pensando en Europa?</div>
+<div id="i7">Viaja a Europa desde $2.969.000</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Déjate sorprender por los nuevos circuitos a Europa ¿Qué esperas para iniciar una nueva aventura?</div>
+<div id="i12">En este mes regálate el viaje a Europa que tanto sueñas.Con Viajes Falabella es posible,visítanos en la sucursal más cercana a ti y reserva tu viaje.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/AUZZFMv.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/EY8TkE1.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/WbkhSqc.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/YUO9GgH.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/3CMOldo.jpg"></dataimg>
-<!--#/#--><!--#i2.i74.slice-image.html:slice-image/html.1-->
-<dataimg id="i74" src="https://i.imgur.com/qhOE80m.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/Wz3qkmD.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i75.image.html:image/html-->
@@ -2396,8 +2394,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i2.i74.slice-image.js:slice-image/base/js.1*/
-
 /*#/#*//*#i75.image.js:image/base/js*/
 
 /*#/#*//*#i75.i76.positioning.js:positioning/base/js.2*/
@@ -2410,13 +2406,13 @@ bmShow('i16');
 
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
-/*#/#*//*#i68.i70.actions.js:actions/base/js.1*/
+/*#/#*//*#i68.i79.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
-    /*#i70.i71.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i79.i80.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2427,13 +2423,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i48.i49.positioning.js:positioning/base/js.2*/
 bmShow('i48');
-/*#/#*//*#i48.i62.actions.js:actions/base/js.1*/
+/*#/#*//*#i48.i81.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i48');
 
 el.addEventListener('click', function(e){
-    /*#i62.i63.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i81.i82.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2444,13 +2440,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i50.i51.positioning.js:positioning/base/js.2*/
 bmShow('i50');
-/*#/#*//*#i50.i64.actions.js:actions/base/js.1*/
+/*#/#*//*#i50.i83.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i50');
 
 el.addEventListener('click', function(e){
-    /*#i64.i65.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i83.i84.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2461,13 +2457,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i52.i53.positioning.js:positioning/base/js.2*/
 bmShow('i52');
-/*#/#*//*#i52.i66.actions.js:actions/base/js.1*/
+/*#/#*//*#i52.i85.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i52');
 
 el.addEventListener('click', function(e){
-    /*#i66.i67.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i85.i86.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2501,25 +2497,22 @@ customName: 1;
 /*#/#*//*#i42.i43.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: ¿Pensando en Europa?; customName: false;
+name: Viaja a Europa desde $2.969.000; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: Déjate sorprender por los nuevos circuitos a Europa ¿Qué esperas para iniciar una nueva aventura?; customName: false;
+name: En este mes regálate el viaje a Europa que tanto sueñas.Con Viajes Falabella es posible,visítanos en la sucursal más cercana a ti y reserva tu viaje.; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: AUZZFMv.jpg; fileId: ; sourceTypeId: externalUrl;
+name: EY8TkE1.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: WbkhSqc.jpg; fileId: ; sourceTypeId: externalUrl;
+name: YUO9GgH.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: 3CMOldo.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i74.slice-image.meta:slice-image/meta.1*/
-name: qhOE80m.jpg; fileId: ; sourceTypeId: externalUrl;
-customName: false;
+name: Wz3qkmD.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i75.image.meta:image/meta*/
