--- a/Falabella7/Cube.html
+++ b/Falabella7/Cube.html
@@ -1078,7 +1078,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i492.i493.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1161,7 +1161,7 @@ var el = document.getElementById('i420');
 
 el.addEventListener('click', function(e){
     /*#i496.i497.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1240,7 +1240,7 @@ var el = document.getElementById('i444');
 
 el.addEventListener('click', function(e){
     /*#i500.i501.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
