--- a/Falabella7/Venetian320x480.html
+++ b/Falabella7/Venetian320x480.html
@@ -2446,7 +2446,7 @@ var el = document.getElementById('i50');
 
 el.addEventListener('click', function(e){
     /*#i83.i84.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/TYuB7qw8YVpSFR5R6'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
